did i get you right? :)

--- a/catalog.html
+++ b/catalog.html
@@ -53,7 +53,7 @@
          <ul class="ice-cream-list">
            <!-- Первая строка -->
            <li class="ice-cream-item">
-             <img src="img/1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+             <img src="img/1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
              <p>
                310₽<span class="kg">/кг</span>
              </p>
@@ -62,7 +62,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="img/2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+             <img src="img/2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
              <p>
                380₽<span class="kg">/кг</span>
              </p>
@@ -71,7 +71,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="img/3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+             <img src="img/3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
              <p>
                355₽<span class="kg">/кг</span>
              </p>
@@ -80,7 +80,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="img/4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+             <img src="img/4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
              <p>
                415₽<span class="kg">/кг</span>
              </p>
@@ -90,7 +90,7 @@
            </li>
           <!-- Вторая строка -->
            <li class="ice-cream-item">
-             <img src="img/5.png" width="267" height="267" alt="Сливочное с брусничным джемом">
+             <img src="img/5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
              <p>
                325₽<span class="kg">/кг</span>
              </p>
@@ -99,7 +99,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-            <img src="img/6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+            <img src="img/6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
              <p>
                410₽<span class="kg">/кг</span>
              </p>
@@ -108,7 +108,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="img/7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+             <img src="img/7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
              <p>
                375₽<span class="kg">/кг</span>
              </p>
@@ -117,7 +117,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-            <img src="img/8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+            <img src="img/8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
              <p>
                320₽<span class="kg">/кг</span>
              </p>
@@ -127,7 +127,7 @@
            </li>
            <!-- Третья строка -->
            <li class="ice-cream-item">
-             <img src="img/9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+             <img src="img/9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
              <p>
                440₽<span class="kg">/кг</span>
              </p>
@@ -136,7 +136,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="img/10.png" width="267" height="267" alt="Сливочное с ментоловым сиропом">
+             <img src="img/10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
              <p>
                435₽<span class="kg">/кг</span>
              </p>
@@ -145,7 +145,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-             <img src="img/11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+             <img src="img/11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
              <p>
                355₽<span class="kg">/кг</span>
              </p>
@@ -154,7 +154,7 @@
             </p>
            </li>
            <li class="ice-cream-item">
-            <img src="img/12.png" width="267" height="267" alt="Сливочное с мятным сиропом">
+            <img src="img/12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
              <p>
                420₽<span class="kg">/кг</span>
              </p>
