--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
              <ul class="features-list">
                <li class="feature-item">
-                 <img src="img/ice-cream.svg" width="49" height="49" alt="иконка мороженого">
+                 <img src="#" alt="иконка мороженого">
                  <p>
                    Все наше мороженое изготавливается на собственном
                    производстве, с использованием современного оборудования и
@@ -60,7 +60,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="img/eco.svg" width="49" height="49" alt="иконка листика">
+                 <img src="#" alt="иконка листика">
                  <p>
                    Для приготовления мороженого используются настоящие сливки и
                    молоко высочайшего качества. Все дополнительные ингредиенты и
@@ -68,7 +68,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="img/cow.svg" width="49" height="49" alt="иконка коровы">
+                 <img src="#" alt="иконка коровы">
                  <p>
                    Закупка ингредиентов  производится только у проверенных
                    фермерских хозяйств и компаний, с которыми нас связывает
@@ -76,7 +76,7 @@
                  </p>
                </li>
                <li class="feature-item">
-                 <img src="img/thermometer.svg" width="49" height="49" alt="иконка термостата">
+                 <img src="#" alt="иконка термостата">
                  <p>
                    Доставка нашего мороженого до заказчиков осуществляется в
                    специальном термопаке, который не дает мороженому растаять в
